--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     env_file:
       - .env
-    build: git@github.com:EmilMoe/httpd.git
+    build: https://github.com/EmilMoe/httpd.git
     volumes:
       - .:/var/www/html
     ports:
@@ -15,7 +15,7 @@ services:
   database:
     env_file:
       - .env
-    build: git@github.com:EmilMoe/sqld.git
+    build: https://github.com/EmilMoe/sqld.git
     environment:
         - DATABASE=${DB_DATABASE}
     ports:
