--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
   web:
     env_file:
       - .env
-    build: emilmoe/httpd
+    build: 
+      context: https://github.com/EmilMoe/httpd.git
     volumes:
       - .:/var/www/html
     ports:
@@ -15,9 +16,9 @@ services:
   database:
     env_file:
       - .env
-    build: emilmoe/sqld
+    build: 
+      context: https://github.com/EmilMoe/sqld.git
     environment:
         - DATABASE=${DB_DATABASE}
     ports:
         - 3306:3306
-
