--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,13 @@ services:
     user: local
 
   # The Database
-  # database:
-  #  env_file:
-  #    - .env
-  #  build: 
-  #    context: https://github.com/EmilMoe/sqld.git
-  #  environment:
-  #      - DATABASE=${DB_DATABASE}
-  #  ports:
-  #      - 3306:3306
+   database:
+    env_file:
+      - .env
+    build: 
+      context: https://github.com/EmilMoe/sqld.git
+    environment:
+        - DATABASE=${DB_DATABASE}
+    ports:
+        - 3306:3306
 
