--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.3'
 services:
   # The Web Server
   web:
+    container_name: ${NAME}_web
     env_file:
       - .env
     build: 
@@ -14,7 +15,8 @@ services:
     user: local
 
   # The Database
-   database:
+  database:
+    container_name: ${NAME}_database
     env_file:
       - .env
     build: 
