--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 services:
   # The Web Server
   web:
-    container_name: ${APP_NAME}_web
+    container_name: ${APP_NAME}
     env_file:
       - .env
     build: 
